objects/salesperson__c.object
<CustomObject>
    <description>取引先に対して、年度と部門毎の担当者</description>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>sp_UserName__r.LastName &amp;  &quot; &quot; &amp; sp_UserName__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業担当者名(数式)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_BMN__c</fullName>
        <label>部門</label>
        <picklist>
            <picklistValues>
                <fullName>EO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sp_BusinessYear__c</fullName>
        <label>対象年度</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sp_CustomerSituation__c</fullName>
        <formula>TEXT(sp_account_c__r.CustomerSituation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先の状況</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_EndDate__c</fullName>
        <label>担当終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sp_Foreign_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>取引先コード_年度_部門_従業員番号</description>
        <externalId>true</externalId>
        <label>外部連携キー</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sp_Specific_customer__c</fullName>
        <label>特定客先</label>
        <picklist>
            <picklistValues>
                <fullName>特定客先</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sp_StartDate__c</fullName>
        <label>担当開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sp_UndergraduateFormula__c</fullName>
        <formula>sp_account_c__r.UndergraduateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_UserCode__c</fullName>
        <formula>sp_UserName__r.UserCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ユーザコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当者名</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sp_UserCode_r</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sp_UserSEQ__c</fullName>
        <description>営業担当者が複数人の時の識別</description>
        <label>営業担当者SEQ</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sp_UserSEQ_disp__c</fullName>
        <description>関連リストの表示順序をコントロール
SEQ 1が上位、終了日ありは下へ</description>
        <formula>IF ( not ISNULL(sp_EndDate__c), &quot;0&quot;,
CASE( TEXT(sp_UserSEQ__c)
,&quot;1&quot;,&quot;9&quot;
, &quot;2&quot;,&quot;8&quot;
,&quot;3&quot;,&quot;7&quot;
,&quot;0&quot;))</formula>
        <label>営業担当者表示順序</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_account_c__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業担当者</relationshipLabel>
        <relationshipName>sp_account</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sp_account_code__c</fullName>
        <formula>sp_account_c__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sp_mail__c</fullName>
        <formula>sp_UserName__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メール</label>
        <type>Text</type>
    </fields>
    <label>営業担当者</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sp_BusinessYear__c</columns>
        <columns>sp_BMN__c</columns>
        <columns>sp_Specific_customer__c</columns>
        <columns>sp_account_code__c</columns>
        <columns>sp_account_c__c</columns>
        <columns>sp_UndergraduateFormula__c</columns>
        <columns>sp_CustomerSituation__c</columns>
        <columns>sp_UserName__c</columns>
        <columns>sp_mail__c</columns>
        <columns>sp_StartDate__c</columns>
        <columns>sp_EndDate__c</columns>
        <columns>sp_Foreign_key__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All_SI</fullName>
        <columns>NAME</columns>
        <columns>sp_BusinessYear__c</columns>
        <columns>sp_BMN__c</columns>
        <columns>sp_Specific_customer__c</columns>
        <columns>sp_account_code__c</columns>
        <columns>sp_account_c__c</columns>
        <columns>sp_UndergraduateFormula__c</columns>
        <columns>sp_CustomerSituation__c</columns>
        <columns>sp_UserName__c</columns>
        <columns>sp_mail__c</columns>
        <columns>sp_StartDate__c</columns>
        <columns>sp_EndDate__c</columns>
        <columns>sp_Foreign_key__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sp_BMN__c</field>
            <operation>equals</operation>
            <value>SI</value>
        </filters>
        <label>すべて選択　SI</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>sp-{00000000}</displayFormat>
        <label>営業担当者_name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMNcheck</fullName>
        <active>true</active>
        <description>必須入力チェック</description>
        <errorConditionFormula>ISBLANK( TEXT( sp_BMN__c ) )</errorConditionFormula>
        <errorDisplayField>sp_BMN__c</errorDisplayField>
        <errorMessage>選択リストから値を設定して下さい。&lt;部門&gt;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TANTOcheck</fullName>
        <active>true</active>
        <description>必須入力チェック</description>
        <errorConditionFormula>ISBLANK( sp_UserName__c   )</errorConditionFormula>
        <errorDisplayField>sp_UserName__c</errorDisplayField>
        <errorMessage>営業担当者を設定して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>YEARcheck</fullName>
        <active>true</active>
        <description>必須入力チェック</description>
        <errorConditionFormula>ISBLANK( TEXT( sp_BusinessYear__c  ) )</errorConditionFormula>
        <errorDisplayField>sp_BusinessYear__c</errorDisplayField>
        <errorMessage>選択リストから値を設定して下さい。&lt;年度&gt;</errorMessage>
    </validationRules>
</CustomObject>